--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Bachelors Degree</h3>
-										<span class="company">Imam Muhammad ibn Saud Islamic University | 2019 to
+										<span class="company">Imam Muhammad ibn Saud Islamic University | 2019 -
 											2023</span>
 									</div>
 									<div class="timeline-body">
