--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								</h3>
 								<p>
 									<ul class="fh5co-social-icons">
-										<li><a href="https://github.com/kunkoder/" target="_blank"><i
+										<li><a href="https://github.com/kunkoder?tab=repositories" target="_blank"><i
 													class="icon-github2"></i></a></li>
 										<li><a href="https://www.linkedin.com/in/gema-nur-sidik-b43534148/"
 												target="_blank"><i class="icon-linkedin2"></i></a></li>
@@ -100,10 +100,15 @@
 
 						</p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://github.com/kunkoder?tab=repositories"><i class="icon-github2"></i></a>
+							<li><a href="https://github.com/kunkoder?tab=repositories" target="_blank"><i
+										class="icon-github2"></i></a>
 							</li>
-							<li><a href="https://www.linkedin.com/in/gema-nur-sidik-b43534148/"><i
+							<li><a href="https://www.linkedin.com/in/gema-nur-sidik-b43534148/" target="_blank"><i
 										class="icon-linkedin2"></i></a></li>
+							<li><a href="https://wa.me/6285735501035?text=Halo gema, mari berkenalan" target="_blank"><i
+										class="icon-chat2"></i></a></li>
+							<li><a href="mailto:gemansidik@gmail.com?subject=Mari%20adalah%20kenalan&body=Halo%20gema%21"
+									target="_blank"><i class="icon-email"></i></a></li>
 						</ul>
 						</p>
 					</div>
